zebra-rpc/src/methods/tests/snapshots/getrawtransaction_invalid_txid@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: rsp
snapshot_kind: text
---
{
  "Err": {
    "code": -5,
    "message": "invalid TXID length"
  }
}
