zebra-rpc/src/methods/tests/snapshots/getrawtransaction_verbosity=0@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: rsp
snapshot_kind: text
---
{
  "Ok": "01000000010000000000000000000000000000000000000000000000000000000000000000ffffffff03510101ffffffff0250c30000000000002321025229e1240a21004cf8338db05679fa34753706e84f6aebba086ba04317fd8f99acd43000000000000017a914ef775f1f997f122a062fff1a2d7443abd1f9c6428700000000"
}
