zebra-rpc/src/methods/tests/snapshots/gettxout_invalid_txid@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 603
expression: rsp
---
{
  "Err": {
    "code": -5,
    "message": "Invalid string length"
  }
}
