zebra-rpc/src/methods/tests/snapshots/gettxout_nonexistent_index@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 580
expression: rsp
---
{
  "Ok": null
}
