zebra-rpc/src/methods/tests/snapshots/gettxout_unknown_txid@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 598
expression: rsp
---
{
  "Ok": null
}
